--- a/index.html
+++ b/index.html
@@ -7,20 +7,18 @@ layout: landing
 							<h2>{{ site.title }}</h2>
 							<p>{{ site.description | markdownify }}</p>
 							<ul class="actions">
-								<li><a href="#" class="button special">Activate</a></li>
+								<!--<li><a href="#" class="button special">Activate</a></li>-->
 							</ul>
 						</div>
-						<a href="#one" class="more scrolly">Learn More</a>
+						<a href="#one" class="more scrolly">Saber mais</a>
 					</section>
 
 				<!-- One -->
 					<section id="one" class="wrapper style1 special">
 						<div class="inner">
 							<header class="major">
-								<h2>Arcu aliquet vel lobortis ata nisl<br />
-								eget augue amet aliquet nisl cep donec</h2>
-								<p>Aliquam ut ex ut augue consectetur interdum. Donec amet imperdiet eleifend<br />
-								fringilla tincidunt. Nullam dui leo Aenean mi ligula, rhoncus ullamcorper.</p>
+								<h2>Hoje em várias cidades de Portugal</h2>
+								<p>Dedicados em criar os melhores eventos tecnológicos.</p>
 							</header>
 							<ul class="icons major">
 								<li><span class="icon fa-diamond major style1"><span class="label">Lorem</span></span></li>
@@ -33,24 +31,34 @@ layout: landing
 				<!-- Two -->
 					<section id="two" class="wrapper alt style2">
 						<section class="spotlight">
-							<div class="image"><img src="images/pic01.jpg" alt="" /></div><div class="content">
-								<h2>Magna primis lobortis<br />
-								sed ullamcorper</h2>
-								<p>Aliquam ut ex ut augue consectetur interdum. Donec hendrerit imperdiet. Mauris eleifend fringilla nullam aenean mi ligula.</p>
+							<div class="image"><img src="images/gdgazores.jpg" alt="" /></div><div class="content">
+								<h2>GDGAzores</h2>
+								<p><a href="http://gdgazores.esy.es/" target="_blank">gdgazores</a></p>
+								<!--<p>Aliquam ut ex ut augue consectetur interdum. Donec hendrerit imperdiet. Mauris eleifend fringilla nullam aenean mi ligula.</p>-->
 							</div>
 						</section>
 						<section class="spotlight">
-							<div class="image"><img src="images/pic02.jpg" alt="" /></div><div class="content">
-								<h2>Tortor dolore feugiat<br />
-								elementum magna</h2>
-								<p>Aliquam ut ex ut augue consectetur interdum. Donec hendrerit imperdiet. Mauris eleifend fringilla nullam aenean mi ligula.</p>
+							<div class="image"><img src="images/gdgbraga.jpg" alt="" /></div><div class="content">
+								<h2>GDGBraga</h2>
+								<p><a href="https://plus.google.com/108643552146544275886" target="_blank">Google+ Braga</a></p>
 							</div>
 						</section>
 						<section class="spotlight">
-							<div class="image"><img src="images/pic03.jpg" alt="" /></div><div class="content">
-								<h2>Augue eleifend aliquet<br />
-								sed condimentum</h2>
-								<p>Aliquam ut ex ut augue consectetur interdum. Donec hendrerit imperdiet. Mauris eleifend fringilla nullam aenean mi ligula.</p>
+							<div class="image"><img src="images/gdgcoimbra.jpg" alt="" /></div><div class="content">
+								<h2>GDGCoimbra</h2>
+								<p><a href="http://gdgcoimbra.xyz/" target="_blank">gdgcoimbra.xyz</a></p>
+							</div>
+						</section>
+						<section class="spotlight">
+							<div class="image"><img src="images/gdglisboa.jpg" alt="" /></div><div class="content">
+								<h2>GDGLisboa</h2>
+								<p><a href="https://www.gdglisbon.xyz/" target="_blank">gdglisbon.xyz</a></p>
+							</div>
+						</section>
+						<section class="spotlight">
+							<div class="image"><img src="images/gdgporto.jpg" alt="" /></div><div class="content">
+								<h2>GDGPorto</h2>
+								<p><a href="http://www.gdgporto.xyz/" target="_blank">gdgporto.xyz</a></p>
 							</div>
 						</section>
 					</section>
@@ -59,40 +67,41 @@ layout: landing
 					<section id="three" class="wrapper style3 special">
 						<div class="inner">
 							<header class="major">
-								<h2>Accumsan mus tortor nunc aliquet</h2>
-								<p>Aliquam ut ex ut augue consectetur interdum. Donec amet imperdiet eleifend<br />
-								fringilla tincidunt. Nullam dui leo Aenean mi ligula, rhoncus ullamcorper.</p>
+								<h2>Desde o local, com o nacional para o mundial</h2>
+								<p>A qualquer nível de contacto, qualquer capítulo da GDG Portugal<br />
+								está preparado para organizar qualquer tipo de evento tecnológico.</p>
 							</header>
 							<ul class="features">
-								<li class="icon fa-paper-plane-o">
-									<h3>Arcu accumsan</h3>
-									<p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
-								</li>
 								<li class="icon fa-laptop">
-									<h3>Ac Augue Eget</h3>
-									<p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
+									<h3>Conferências</h3>
+									<p>Todos os membros têm experiência em organizar, desde pequenas "techtalks"" locais a conferências 100+ participantes com oradores internacionais.</p>
+								</li>
+								<li class="icon fa-paper-plane-o">
+									<h3>Oradores</h3>
+									<p>Seja nacional ou internacional, os nossos organizadores estão preparados para falar de tecnologia.</p>
 								</li>
 								<li class="icon fa-code">
-									<h3>Mus Scelerisque</h3>
-									<p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
+									<h3>Workshops</h3>
+									<p>Partilhamos o conhecimento adquirido através de workshops por Portugal sobre tecnologias Google, desde workshops de introdução a alto nível de especialização.</p>
 								</li>
 								<li class="icon fa-headphones">
-									<h3>Mauris Imperdiet</h3>
-									<p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
+									<h3>Ouvimos</h3>
+									<p>Estamos atentos às necessidades e interesses das comunidades e procuramos sempre entregar o que nos é pedido. Comunidade sempre em primeiro lugar</p>
 								</li>
 								<li class="icon fa-heart-o">
-									<h3>Aenean Primis</h3>
-									<p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
+									<h3>Abertos</h3>
+									<p>Colaboramos com qualquer comunidade tecnológica, de forma a entregar a melhor qualidade de conteúdo e eventos.</p>
 								</li>
 								<li class="icon fa-flag-o">
-									<h3>Tortor Ut</h3>
-									<p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
+									<h3>Partilha</h3>
+									<p>Procuramos crescer através da partilha e abertura a novos organizadores com a mesma paixão que nós por tecnologia.</p>
 								</li>
 							</ul>
 						</div>
 					</section>
 
 				<!-- CTA -->
+				<!--
 					<section id="cta" class="wrapper style4">
 						<div class="inner">
 							<header>
@@ -105,3 +114,4 @@ layout: landing
 							</ul>
 						</div>
 					</section>
+					-->
