ga & minor spelling corrections

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@ layout: landing
 							<ul class="features">
 								<li class="icon fa-laptop">
 									<h3>Conferências</h3>
-									<p>Todos os membros têm experiência em organizar, desde pequenas "techtalks"" locais a conferências 100+ participantes com oradores internacionais.</p>
+									<p>Todos os membros têm experiência em organizar, desde pequenas "techtalks" locais a conferências 100+ participantes com oradores internacionais.</p>
 								</li>
 								<li class="icon fa-paper-plane-o">
 									<h3>Oradores</h3>
@@ -86,7 +86,7 @@ layout: landing
 								</li>
 								<li class="icon fa-headphones">
 									<h3>Ouvimos</h3>
-									<p>Estamos atentos às necessidades e interesses das comunidades e procuramos sempre entregar o que nos é pedido. Comunidade sempre em primeiro lugar</p>
+									<p>Estamos atentos às necessidades e interesses das comunidades e procuramos sempre entregar o que nos é pedido. Comunidade sempre em primeiro lugar.</p>
 								</li>
 								<li class="icon fa-heart-o">
 									<h3>Abertos</h3>
