Template for organizers and retired organizers

--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@ layout: landing
 							<div class="image"><img src="images/gdgazores.jpg" alt="" /></div><div class="content">
 								<h2>GDGAzores</h2>
 								<p><a href="http://gdgazores.esy.es/" target="_blank">gdgazores</a></p>
+
 								<!--<p>Aliquam ut ex ut augue consectetur interdum. Donec hendrerit imperdiet. Mauris eleifend fringilla nullam aenean mi ligula.</p>-->
 							</div>
 						</section>
@@ -100,7 +101,39 @@ layout: landing
 						</div>
 					</section>
 
-				<!-- CTA -->
+					<!-- Team -->
+					<!-- Por ordem alfabética, por chapter depois nome -->
+					<section id="three" class="wrapper style5 special">
+							<div class="inner">
+									<h2>Organizadores ativos</h2>
+									<p>Porque temos de dar a cara, estes são os organizadores presentes em Portugal, constantemente a oferecer o melhor para a comunidade.</p>
+							</div>
+							<ul class="features">
+									<!-- Template -->
+									<li class="icon fa-user">
+										<h3>#Nome# #(GDG | WTM) </h3> <!-- ex.: Gerónimo Antunes  -->
+										<h4>#Chapter# (com url)</h4>
+										<!-- if(WTM also organizer) include <h5>WTM</h5> -->
+										<p>#Links sociais#</p>
+									</li>
+								</ul>
+						</section>
+					<section id="three" class="wrapper style5 special">
+						<div class="inner">
+								<h2>Testemunhos de antigo organizadores</h2>
+								<p>Pelas comunidades passam centezas pessoas, algumas tornam-se organizadores depois de um trabalho bem entregue alguns decidem guardar as trouxas.<br/>
+								Aqui estão os testemunhos dos organizadores veteranos, amigos, colegas.</p>
+								<ul class="features">
+										<li class="icon fa-laptop">
+											<h3>#Nome# #Ano inicio#-#ano fim#</h3> <!--ex.: Gilberto Nunes 2016-2017 (ou só 2016)-->
+											<p>#Testemunho#</p>
+											<p>#Links Sociais#</p>
+										</li>
+									</ul>
+						</div>
+					</section>
+
+						
 				<!--
 					<section id="cta" class="wrapper style4">
 						<div class="inner">
