Added GDGLeiria Info

--- a/index.html
+++ b/index.html
@@ -61,6 +61,12 @@ layout: landing
 								<p><a href="http://www.gdgporto.xyz/" target="_blank">gdgporto.xyz</a></p>
 							</div>
 						</section>
+						<section class="spotlight">
+							<div class="image"><img src="images/gdgleiria.jpg" alt="" /></div><div class="content">
+							<h2>GDGLeiria</h2>
+							<p><a href="http://www.gdgleiria.xyz/" target="_blank">gdgleiria.xyz</a></p>
+						</div>
+						</section>
 					</section>
 
 				<!-- Three -->
