--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@ layout: landing
 						<section class="spotlight">
 							<div class="image"><img src="images/gdgazores.jpg" alt="" /></div><div class="content">
 								<h2>GDGAzores</h2>
-								<p><a href="http://gdgazores.esy.es/" target="_blank">gdgazores</a></p>
+								<p><a href="https://gdgazores.xyz/" target="_blank">gdgazores</a></p>
 								<!--<p>Aliquam ut ex ut augue consectetur interdum. Donec hendrerit imperdiet. Mauris eleifend fringilla nullam aenean mi ligula.</p>-->
 							</div>
 						</section>
