Adicionada informação sobre a GDGMadeira

--- a/index.html
+++ b/index.html
@@ -50,15 +50,9 @@ layout: landing
 							</div>
 						</section>
 						<section class="spotlight">
-							<div class="image"><img src="images/gdglisboa.jpg" alt="" /></div><div class="content">
-								<h2>GDGLisboa</h2>
-								<p><a href="https://www.gdglisbon.xyz/" target="_blank">gdglisbon.xyz</a></p>
-							</div>
-						</section>
-						<section class="spotlight">
-							<div class="image"><img src="images/gdgporto.jpg" alt="" /></div><div class="content">
-								<h2>GDGPorto</h2>
-								<p><a href="http://www.gdgporto.xyz/" target="_blank">gdgporto.xyz</a></p>
+							<div class="image"><img src="images/gdgfaro.jpg" alt="" /></div><div class="content">
+								<h2>GDGFaro</h2>
+								<p><a href="http://gdgfaro.xyz/" target="_blank">gdgfaro.xyz</a></p>
 							</div>
 						</section>
 						<section class="spotlight">
@@ -66,6 +60,24 @@ layout: landing
 							<h2>GDGLeiria</h2>
 							<p><a href="http://www.gdgleiria.xyz/" target="_blank">gdgleiria.xyz</a></p>
 						</div>
+						</section>
+						<section class="spotlight">
+							<div class="image"><img src="images/gdglisboa.jpg" alt="" /></div><div class="content">
+								<h2>GDGLisboa</h2>
+								<p><a href="https://www.gdglisbon.xyz/" target="_blank">gdglisbon.xyz</a></p>
+							</div>
+						</section>
+						<section class="spotlight">
+							<div class="image"><img src="images/gdgmadeira.jpg" alt="" /></div><div class="content">
+								<h2>GDGMadeira</h2>
+								<p><a href="https://www.gdgmadeira.xyz/" target="_blank">gdgmadeira.xyz</a></p>
+							</div>
+						</section>
+						<section class="spotlight">
+							<div class="image"><img src="images/gdgporto.jpg" alt="" /></div><div class="content">
+								<h2>GDGPorto</h2>
+								<p><a href="http://www.gdgporto.xyz/" target="_blank">gdgporto.xyz</a></p>
+							</div>
 						</section>
 					</section>
 
